--- a/.drone.yml
+++ b/.drone.yml
@@ -116,6 +116,7 @@ pipeline:
       - cd ../server/
       - ./occ app:enable $APP_NAME
       - cd apps/$APP_NAME
+      - composer install
       - phpunit -c tests/phpunit.xml --coverage-clover build/php-unit.coverage.xml
       - phpunit -c tests/phpunit.integration.xml --coverage-clover build/php-integration.coverage.xml
     when:
@@ -135,6 +136,7 @@ pipeline:
       - php occ app:enable deck
       - cd apps/$APP_NAME
       # Run phpunit tests
+      - composer install
       - phpunit -c tests/phpunit.xml --coverage-clover build/php-unit.coverage.xml
       - phpunit -c tests/phpunit.integration.xml --coverage-clover build/php-integration.coverage.xml
     when:
@@ -153,6 +155,7 @@ pipeline:
       - cd ../server/
       - php occ app:enable deck
       - cd apps/$APP_NAME
+      - composer install
       - phpunit -c tests/phpunit.xml --coverage-clover build/php-unit.coverage.xml
       - phpunit -c tests/phpunit.integration.xml --coverage-clover build/php-integration.coverage.xml
     when:
@@ -171,6 +174,7 @@ pipeline:
       - cd ../server/
       - php occ app:enable deck
       - cd apps/$APP_NAME
+      - composer install
       - phpunit -c tests/phpunit.xml --coverage-clover build/php-unit.coverage.xml
       - phpunit -c tests/phpunit.integration.xml --coverage-clover build/php-integration.coverage.xml
     when:
